--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "aurelia-bootstrapper": "^1.0.0",
     "aurelia-fetch-client": "^1.0.0",
     "aurelia-materialize-bridge": "^0.17.1",
+    "aurelia-validation": "^0.13.1",
     "bluebird": "^3.4.1",
     "requirejs": "^2.3.2",
     "text": "github:requirejs/text"
